[gd_scene load_steps=18 format=3 uid="uid://32o5rp6n6k4g"]

[ext_resource type="Script" path="res://Levels/room_6.gd" id="1_ld26i"]
[ext_resource type="PackedScene" uid="uid://b0fn3ogr4nvsx" path="res://Scenes/player.tscn" id="1_vtqw7"]
[ext_resource type="PackedScene" uid="uid://nneplcyswr75" path="res://Scenes/tile_map.tscn" id="2_lfogm"]
[ext_resource type="Texture2D" uid="uid://dv7wkwvv2eyvy" path="res://asstes/PNG/Default/Border/panel-border-004.png" id="3_qcmqf"]
[ext_resource type="Texture2D" uid="uid://r1cajlt61gar" path="res://asstes/PNG/Default/Panel/panel-009.png" id="4_82kem"]
[ext_resource type="Texture2D" uid="uid://ja1u7hw47hut" path="res://asstes/PNG/Default/Border/panel-border-015.png" id="5_lcuhh"]
[ext_resource type="Texture2D" uid="uid://dpqudlipljcxv" path="res://asstes/PNG/Default/Panel/panel-020.png" id="6_vcm8m"]
[ext_resource type="Texture2D" uid="uid://cktfadlxdiw6m" path="res://asstes/PNG/Default/Transparent center/panel-transparent-center-002.png" id="7_jymcb"]
[ext_resource type="Texture2D" uid="uid://ub43ibnlfggw" path="res://asstes/PNG/Default/Transparent center/panel-transparent-center-026.png" id="8_g58ds"]
[ext_resource type="Texture2D" uid="uid://dikqwnd06wku3" path="res://asstes/PNG/Default/Transparent border/panel-transparent-border-017.png" id="9_la1w4"]
[ext_resource type="Texture2D" uid="uid://bjnb7tn2whhr5" path="res://asstes/PNG/Default/Transparent border/panel-transparent-border-008.png" id="10_vaa36"]
[ext_resource type="AudioStream" uid="uid://c0dc6rnc6qcvf" path="res://asstes/Sounds/mixkit-gear-fast-lock-tap-2857.wav" id="12_qr2c6"]
[ext_resource type="AudioStream" uid="uid://bkqbvpl0jie8p" path="res://asstes/Sounds/mixkit-gear-metallic-lock-sound-2858.wav" id="13_s3w2j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gl3am"]
size = Vector2(20, 191.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l4w4r"]
size = Vector2(12, 13)

[sub_resource type="LabelSettings" id="LabelSettings_igqbm"]
font_size = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1d3c"]

[node name="room6" type="Node2D"]
script = ExtResource("1_ld26i")

[node name="Player" parent="." instance=ExtResource("1_vtqw7")]
position = Vector2(-8, 60)

[node name="TileMap" parent="." instance=ExtResource("2_lfogm")]
layer_0/tile_data = PackedInt32Array(393212, 589827, 5, 393213, 589827, 5, 393214, 589827, 5, 393215, 589827, 5, 327680, 589827, 5, 327681, 589827, 5, 327682, 589827, 5, 327683, 589827, 5, 327684, 655363, 5, 393211, 524291, 5, 327675, 524291, 4, 262139, 524291, 4, 196603, 524291, 4, 131067, 524291, 4, 65531, 524291, 4, -5, 524291, 4, -65541, 524291, 4, -131077, 524291, 4, -196613, 524291, 3, -196612, 589827, 3, -196611, 589827, 3, -196610, 589827, 3, -196609, 589827, 3, -262144, 589827, 3, -262143, 589827, 3, -262142, 589827, 3, -262141, 589827, 3, -262140, 655363, 3, -196604, 655363, 4, -131068, 655363, 4, -65532, 655363, 4, 4, 655363, 4, 65540, 655363, 4, 131076, 655363, 4, 196612, 655363, 4, 262148, 655363, 4, -131076, 589827, 4, -65540, 589827, 4, -4, 589827, 4, 65532, 589827, 4, 131068, 589827, 4, 196604, 589827, 4, 262140, 589827, 4, 327676, 589827, 4, -131075, 589827, 4, -65539, 589827, 4, -3, 589827, 4, 65533, 589827, 4, 131069, 589827, 4, 196605, 589827, 4, 262141, 589827, 4, 327677, 589827, 4, -131074, 589827, 4, -65538, 589827, 4, -2, 589827, 4, 65534, 589827, 4, 131070, 589827, 4, 196606, 589827, 4, 262142, 589827, 4, 327678, 589827, 4, -131073, 589827, 4, -65537, 589827, 4, -1, 589827, 4, 65535, 589827, 4, 131071, 589827, 4, 196607, 589827, 4, 262143, 589827, 4, 327679, 589827, 4, -196608, 589827, 4, -131072, 589827, 4, -65536, 589827, 4, 0, 589827, 4, 65536, 589827, 4, 131072, 589827, 4, 196608, 589827, 4, 262144, 589827, 4, -196607, 589827, 4, -131071, 589827, 4, -65535, 589827, 4, 1, 589827, 4, 65537, 589827, 4, 131073, 589827, 4, 196609, 589827, 4, 262145, 589827, 4, -196606, 589827, 4, -131070, 589827, 4, -65534, 589827, 4, 2, 589827, 4, 65538, 589827, 4, 131074, 589827, 4, 196610, 589827, 4, 262146, 589827, 4, -196605, 589827, 4, -131069, 589827, 4, -65533, 589827, 4, 3, 589827, 4, 65539, 589827, 4, 131075, 589827, 4, 196611, 589827, 4, 262147, 589827, 4)
layer_1/tile_data = PackedInt32Array(393216, 1769473, 196608, 327680, 1769473, 196609, 393215, 1441793, 196609, 458751, 1441793, 196608, 262140, 1245184, 12, 131068, 1245184, 12, -4, 1245184, 12, -131076, 1245184, 12, -196605, 1245184, 12, -65533, 1245184, 12, 65539, 1245184, 12, 196611, 1245184, 12, -196608, 1245184, 14)

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2(90, 2)
shape = SubResource("RectangleShape2D_gl3am")

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D2"]
position = Vector2(-90, 5)
shape = SubResource("RectangleShape2D_gl3am")

[node name="StaticBody2D3" type="StaticBody2D" parent="Walls"]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D3"]
position = Vector2(-74, 0.000267029)
shape = SubResource("RectangleShape2D_gl3am")

[node name="StaticBody2D4" type="StaticBody2D" parent="Walls"]
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D4"]
position = Vector2(106, 0.999992)
shape = SubResource("RectangleShape2D_gl3am")

[node name="Items" type="Node2D" parent="."]

[node name="Pressure plates" type="Node2D" parent="."]
position = Vector2(0, -16)

[node name="Wrong" type="Area2D" parent="Pressure plates"]
position = Vector2(3, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure plates/Wrong"]
position = Vector2(-59, -2)
shape = SubResource("RectangleShape2D_l4w4r")

[node name="4" type="Area2D" parent="Pressure plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure plates/4"]
position = Vector2(-56, 73)
shape = SubResource("RectangleShape2D_l4w4r")

[node name="2" type="Area2D" parent="Pressure plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure plates/2"]
position = Vector2(-56, 41)
shape = SubResource("RectangleShape2D_l4w4r")

[node name="1" type="Area2D" parent="Pressure plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure plates/1"]
position = Vector2(56, 73)
shape = SubResource("RectangleShape2D_l4w4r")

[node name="Wrong2" type="Area2D" parent="Pressure plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure plates/Wrong2"]
position = Vector2(56, 40)
shape = SubResource("RectangleShape2D_l4w4r")

[node name="Wrong3" type="Area2D" parent="Pressure plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure plates/Wrong3"]
position = Vector2(56, 8)
shape = SubResource("RectangleShape2D_l4w4r")

[node name="Wrong4" type="Area2D" parent="Pressure plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure plates/Wrong4"]
position = Vector2(56, -23)
shape = SubResource("RectangleShape2D_l4w4r")

[node name="Reset" type="Area2D" parent="Pressure plates"]
position = Vector2(-7, 21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure plates/Reset"]
position = Vector2(15, -44)
shape = SubResource("RectangleShape2D_l4w4r")

[node name="3" type="Area2D" parent="Pressure plates"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure plates/3"]
position = Vector2(-56, -23)
shape = SubResource("RectangleShape2D_l4w4r")

[node name="Labels" type="Node2D" parent="."]

[node name="Reset" type="Label" parent="Labels"]
offset_left = -4.0
offset_top = -59.0
offset_right = 36.0
offset_bottom = -36.0
text = "Reset"
label_settings = SubResource("LabelSettings_igqbm")

[node name="Sprite2D" type="Sprite2D" parent="Labels"]
position = Vector2(-74, 57)
scale = Vector2(0.33, 0.33)
texture = ExtResource("3_qcmqf")

[node name="Sprite2D5" type="Sprite2D" parent="Labels"]
position = Vector2(75, -39)
scale = Vector2(0.33, 0.33)
texture = ExtResource("4_82kem")

[node name="Sprite2D6" type="Sprite2D" parent="Labels"]
position = Vector2(75, -8)
scale = Vector2(0.33, 0.33)
texture = ExtResource("5_lcuhh")

[node name="Sprite2D7" type="Sprite2D" parent="Labels"]
position = Vector2(-74, 24)
scale = Vector2(0.33, 0.33)
texture = ExtResource("6_vcm8m")

[node name="Sprite2D8" type="Sprite2D" parent="Labels"]
position = Vector2(-74, -39)
scale = Vector2(0.33, 0.33)
texture = ExtResource("7_jymcb")

[node name="Sprite2D2" type="Sprite2D" parent="Labels"]
position = Vector2(-74, -8.00001)
scale = Vector2(0.33, 0.33)
texture = ExtResource("8_g58ds")

[node name="Sprite2D3" type="Sprite2D" parent="Labels"]
position = Vector2(75, 23)
scale = Vector2(0.33, 0.33)
texture = ExtResource("9_la1w4")

[node name="Sprite2D4" type="Sprite2D" parent="Labels"]
position = Vector2(75, 57)
scale = Vector2(0.33, 0.33)
texture = ExtResource("10_vaa36")

[node name="Reset" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_qr2c6")

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_s3w2j")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1, 86)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_w1d3c")

[connection signal="body_entered" from="Pressure plates/Wrong" to="." method="_on_wrong_body_entered"]
[connection signal="body_exited" from="Pressure plates/Wrong" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Pressure plates/4" to="." method="_on_4_body_entered"]
[connection signal="body_exited" from="Pressure plates/4" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Pressure plates/2" to="." method="_on_2_body_entered"]
[connection signal="body_exited" from="Pressure plates/2" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Pressure plates/1" to="." method="_on_1_body_entered"]
[connection signal="body_exited" from="Pressure plates/1" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Pressure plates/Wrong2" to="." method="_on_wrong_body_entered"]
[connection signal="body_exited" from="Pressure plates/Wrong2" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Pressure plates/Wrong3" to="." method="_on_wrong_body_entered"]
[connection signal="body_exited" from="Pressure plates/Wrong3" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Pressure plates/Wrong4" to="." method="_on_wrong_body_entered"]
[connection signal="body_exited" from="Pressure plates/Wrong4" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Pressure plates/Reset" to="." method="_on_reset_body_entered"]
[connection signal="body_exited" from="Pressure plates/Reset" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Pressure plates/3" to="." method="_on_3_body_entered"]
[connection signal="body_exited" from="Pressure plates/3" to="." method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
